# AnotherMe-chat-server

./: .pre-commit-config.yaml  README.md  pyproject.toml  release-notes.md
.github/workflows/: lint-backend.yml
app/: __init__.py  main.py
app/api/: dependencies.py  main.py
app/api/routes/: chat.py  health.py
app/api/utils/: __init__.py  sse.py
app/core/: config.py  dependencies.py  models.py
app/llm/: __init__.py  abc.py  factory.py  gemma3.py  mock.py  qwen3.py
app/schemas/: chat.py  llm.py
app/services/: chat_server.py
scripts/: format.sh
